[package]
authors = ['Polkadex Team https://github.com/Polkadex-Substrate/Polkadex']
build = 'build.rs'
description = 'Polkadex: Orderbook based Decentralized Chain'
edition = '2018'
homepage = 'https://github.com/Polkadex-Substrate/Polkadex'
license = 'Apache 2.0'
name = 'polkadex-mainnet'
repository = 'https://github.com/Polkadex-Substrate/Polkadex'
version = "2.0.0"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[[bin]]
name = 'polkadex-mainnet'

[dependencies]
jsonrpc-core = '15.0.0'
structopt = '0.3.8'
rpc = { path = "../../pallets/polkadex/rpc", version = "0.1.0" }
runtime-api = { path = "../../pallets/polkadex/runtime-api", version = "0.1.0" }
polkadex-mainnet-runtime = { path = "../../runtime/mainnet", version = "2.0.0" }
pallet-transaction-payment-rpc = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }
sc-basic-authorship = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }
sc-client-api = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }
sc-consensus = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }
sc-consensus-slots = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }
sc-consensus-babe = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }
sc-executor = { git = 'https://github.com/paritytech/substrate.git', branch = "master", features = ['wasmtime'] }
sc-finality-grandpa = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }
sc-rpc = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }
sc-rpc-api = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }
sc-service = { git = 'https://github.com/paritytech/substrate.git', branch = "master", features = ['wasmtime'] }
sc-transaction-pool = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }
sp-api = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }
sp-block-builder = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }
sp-blockchain = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }
sp-consensus = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }
sp-consensus-babe = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }
sp-core = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }
sp-finality-grandpa = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }
sp-inherents = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }
sp-transaction-pool = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }
substrate-frame-rpc-system = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }
frame-benchmarking = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }
frame-benchmarking-cli = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }
sc-cli = { git = 'https://github.com/paritytech/substrate.git', features = ['wasmtime'], branch = "master" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "master" }
