[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
build = 'build.rs'
description = 'A fresh FRAME-based Substrate node, ready for hacking.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'polkadex-testnet'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '2.0.0'

[[bin]]
name = 'polkadex-testnet'


[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "master" }

[dependencies]
jsonrpc-core = '15.0.0'
structopt = '0.3.8'

# local dependencies
polkadex-testnet-runtime = { path = '../../runtime/testnet', version = '2.0.0' }
runtime-api = { default-features = false, path = "../../pallets/polkadex/runtime-api" }
rpc = { path = "../../pallets/polkadex/rpc" }
# Substrate dependencies
frame-benchmarking = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }
frame-benchmarking-cli = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }
pallet-transaction-payment-rpc = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }
sc-basic-authorship = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }
sc-keystore = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }
sc-cli = { features = ['wasmtime'], git = 'https://github.com/paritytech/substrate.git', branch = "master" }
sc-client-api = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }
sc-consensus = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }
sc-consensus-aura = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }
sc-executor = { features = ['wasmtime'], git = 'https://github.com/paritytech/substrate.git', branch = "master"  }
sc-finality-grandpa = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }
sc-rpc = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }
sc-rpc-api = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }
sc-service = { features = ['wasmtime'], git = 'https://github.com/paritytech/substrate.git', branch = "master" }
sc-transaction-pool = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }
sp-api = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }
sp-block-builder = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }
sp-blockchain = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }
sp-consensus = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }
sp-consensus-aura = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }
sp-core = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }
sp-finality-grandpa = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }
sp-inherents = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }
sp-transaction-pool = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }
substrate-frame-rpc-system = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }

[features]
default = []
runtime-benchmarks = ['polkadex-testnet-runtime/runtime-benchmarks']
