[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    'serde',
    'sp-core/std',
    'sp-std/std',
    'frame-benchmarking/std'
]
runtime-benchmarks = ["frame-benchmarking"]


[dependencies.frame-benchmarking]
default-features = false
version ="3.0.0"
optional = true

[dependencies.serde]
version = "1.0.101"
optional = true

[dependencies.sp-core]
default-features = false
version = '3.0.0'

[dependencies.sp-std]
default-features = false
version = '3.0.0'

[dependencies.sp-io]
default-features = false
version = '3.0.0'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.frame-support]
default-features = false
version = '3.0.0'

[dependencies.frame-system]
default-features = false
version = '3.0.0'

[dependencies.sp-runtime]
default-features = false
version = '3.0.0'

[package]
authors = ['Anonymous']
description = 'FRAME pallet template for defining custom runtime logic.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'orderbook-engine'
readme = 'README.md'
repository = 'https://github.com/paritytech/substrate/'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']
