[package]
name = "polkadex-ido"
version = "0.1.0"
authors = ["Anonymous"]
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { version = "2.0.0", package = "parity-scale-codec", default-features = false, features = ["derive"] }
hex = { version = "2.1.0", package = "rustc-hex", default-features = false }
serde = { version = "1.0.101", optional = true }

frame-support = { git = "https://github.com/paritytech/substrate", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false }
sp-io = {  git = "https://github.com/paritytech/substrate", default-features = false }
sp-core = {  git = "https://github.com/paritytech/substrate", default-features = false }
sp-std = {  git = "https://github.com/paritytech/substrate", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true }
orml-tokens = { git = "https://github.com/Polkadex-Substrate/open-runtime-module-library.git", default-features = false }
orml-currencies = { git = "https://github.com/Polkadex-Substrate/open-runtime-module-library.git", default-features = false }
orml-traits = { git = "https://github.com/Polkadex-Substrate/open-runtime-module-library.git", default-features = false }
pallet-balances = {git = "https://github.com/paritytech/substrate", default-features = false }
sp-runtime = {  git = "https://github.com/paritytech/substrate", default-features = false }
polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git", branch = 'main', default-features = false }
rand = {default-features = false, version = '0.8.0'}
rand_chacha = {default-features = false, version = '0.3.0'}
[dev-dependencies]
sp-keyring = {  git = "https://github.com/paritytech/substrate", default-features = false }
frame-support-test = {  git = "https://github.com/paritytech/substrate", default-features = false }

[features]
default = ["std"]
std = [
    "serde",
    "hex/std",
    "codec/std",
    "rand/std",
    "rand_chacha/std",
    "frame-support/std",
    "frame-system/std",
    "sp-core/std",
    "sp-std/std",
    "sp-io/std",
    "orml-tokens/std",
    "orml-currencies/std",
    "pallet-balances/std",
    "sp-runtime/std",
    "polkadex-primitives/std",
	'frame-benchmarking/std',
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-system/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
