[package]
name = "polkapool"
version = "0.1.0"
authors = ["Polkadex Authors <gautham@polkadex.trade>"]
edition = "2018"
license = 'Apache 2.0'
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]

frame-support = {  version = '3.0.0',default-features = false }
frame-system = {   version = '3.0.0',default-features = false }
sp-runtime = {   version = '3.0.0',default-features = false }
sp-arithmetic = {   version = '3.0.0',default-features = false }
sp-core = {   version = '3.0.0',default-features = false }


[dev-dependencies]
sp-io = {  version = '3.0.0',default-features = false }


[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std'
]
